// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charts-form Renders \`charts-form\` with custom props 1`] = `
<widget-settings-group-stub
  title="Charts"
>
  <div
    class="layout pa-3 column"
  >
    <field-draggable-list-stub
      itemkey="key"
      items="[object Object],[object Object],[object Object]"
      itemtext="text"
    />
    <v-menu-stub
      bottom="true"
      closedelay="0"
      closeonclick="true"
      closeoncontentclick="true"
      contentclass=""
      contentprops="[object Object]"
      maxheight="auto"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonclick="true"
      origin="top left"
      transition="v-menu-transition"
    >
      <v-list-stub
        tag="div"
      >
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            stacked_bar_chart
          </i>
          <span
            class="ml-3"
          >
            Bar chart
          </span>
        </v-list-item-stub>
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            show_chart
          </i>
          <span
            class="ml-3"
          >
            Line chart
          </span>
        </v-list-item-stub>
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            functions
          </i>
          <span
            class="ml-3"
          >
            Numbers
          </span>
        </v-list-item-stub>
      </v-list-stub>
    </v-menu-stub>
  </div>
</widget-settings-group-stub>
`;

exports[`charts-form Renders \`charts-form\` with custom props 2`] = `undefined`;

exports[`charts-form Renders \`charts-form\` with default props 1`] = `
<widget-settings-group-stub
  title="Charts"
>
  <div
    class="layout pa-3 column"
  >
    <field-draggable-list-stub
      itemkey="key"
      items=""
      itemtext="text"
    />
    <v-menu-stub
      bottom="true"
      closedelay="0"
      closeonclick="true"
      closeoncontentclick="true"
      contentclass=""
      contentprops="[object Object]"
      maxheight="auto"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonclick="true"
      origin="top left"
      transition="v-menu-transition"
    >
      <v-list-stub
        tag="div"
      >
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            stacked_bar_chart
          </i>
          <span
            class="ml-3"
          >
            Bar chart
          </span>
        </v-list-item-stub>
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            show_chart
          </i>
          <span
            class="ml-3"
          >
            Line chart
          </span>
        </v-list-item-stub>
        <v-list-item-stub
          activeclass=""
          tag="div"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            functions
          </i>
          <span
            class="ml-3"
          >
            Numbers
          </span>
        </v-list-item-stub>
      </v-list-stub>
    </v-menu-stub>
  </div>
</widget-settings-group-stub>
`;

exports[`charts-form Renders \`charts-form\` with default props 2`] = `undefined`;
